# tdd_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
helper/: CMakeLists.txt
helper/include/: print.h
helper/tests/: CMakeLists.txt  print_ut.cpp
include/: calculator.h
plain/: CMakeLists.txt
plain/src/: plain.cpp
plain/tests/: CMakeLists.txt
problem0/: CMakeLists.txt
problem0/include/: problem0.h  reverse_char.h  smart_ptr.h
problem0/src/: problem0.cpp  reverse_char.cpp
problem0/tests/: CMakeLists.txt  calculator_ut.cpp  generate.h  main.cpp  problem0_ut.cpp  reverse_char_ut.cpp  smart_ptr_ut.cpp
problem1/: CMakeLists.txt
problem1/include/: smallest_distance.h
problem1/src/: smallest_distance.cpp
problem1/tests/: CMakeLists.txt  smallest_distance.cpp
problem2/: CMakeLists.txt
problem2/include/: max_number.h  plain.h  word_frequency.h
problem2/src/: max_number.cpp
problem2/tests/: CMakeLists.txt  max_number.cpp  word_frequency.cpp
shared_ptr/: CMakeLists.txt
shared_ptr/include/: shared_ptr.h
shared_ptr/src/: shared_ptr.cpp
shared_ptr/tests/: CMakeLists.txt
src/: calculator.cpp
tests/: CMakeLists.txt  calculator_ut.cpp  generate.h  main.cpp
